samples/_failures_safe/1761321905_6c9d88_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_af738921.c: In function ‘main’:
./samples/SAFE/__tmp_af738921.c:151:12: error: expected declaration or statement at end of input
  151 |     struct TransitionTable tt;
      |            ^~~~~~~~~~~~~~~
